[gd_scene load_steps=7 format=2]

[ext_resource path="res://spells/fire/fire2.gd" type="Script" id=1]
[ext_resource path="res://spells/base_projectile.gd" type="Script" id=2]
[ext_resource path="res://spells/fire/sprites/fireball.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.0

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = PoolVector2Array( 0, 0, 300, -120, 300, 120 )

[sub_resource type="Animation" id=3]

resource_name = "death"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "free_scn"
} ]
}

[node name="fire2" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
has_activation = false

[node name="projectile" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
element = 0
level = 2

[node name="sprite" type="Sprite" parent="projectile" index="0"]

scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="shape" type="CollisionShape2D" parent="projectile" index="1"]

shape = SubResource( 1 )

[node name="detection_area" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="detection_area" index="0"]

shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 3 )
blend_times = [  ]

[node name="lifetime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="area_entered" from="projectile" to="projectile" method="_on_projectile_area_entered"]

[connection signal="body_entered" from="projectile" to="." method="_on_projectile_body_entered"]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]


